2022-10-04:

- Re-styled navigation menu:
    - Changed appearance and positioning of navigation links.
    - Changed positioning of logo image.
    - Added a drop-down menu beneath 'Writing', containing links to 'Poetry' and 'Prose'.

This release was re-released with the following fix:

- Fixed 'Prose' and 'Poetry' links on navbar linking to non-existent page if followed from a second-level page.

2022-09-20:

- Fixed lingering link to removed 'Writing' section of 'Endeavours' page; redirected to 'Writing' page.

2022-08-16:

- Updated the Content Warning for 'Rooms of the Desolate'.

2022-08-14:

- Changed preview video for primary YouTube account to 'Hollow Knight, but I'm invisible.'.

2022-07-16:

- Add link to new blog.
- Change footer source link to GitHub repository to be more consistent, as Codeberg only allows hosting for a single repository. Commits will still be made through Codeberg.
- Readjust positioning of logo and theme/font buttons.

2022-07-11-2:

- Fix 'Prose' header on 'Writing' page not linking to 'Prose' subpage.

2022-07-11:

- Added 'Prose' subpage to the 'Writing' page.
- Updated Prose section of main 'Writing' page.
- Improved clarity of 'Legal' page.
- Removed redundant links to obsolete CSS extension from some pages.
- Removed commented code from universal CSS.

2022-07-09:

- Added 'RoyalRoad' to account list.
- Removed 'Movellas' from account list, as that account has been deleted.
- Updated 'Belletristica' account summary to include mention of poetry collections and 'Rooms of the Desolate'.
- Corrected several typos.
- Minor code cleanup.

2022-06-20:

- Fixed height mismatch between left & right footer blocks.

2022-06-17:

- Replaced old logo and favicon with new eye-style theme.
- Removed 'Hardlimit' from account list, as those accounts have been deleted.
- Removed excessive empty space between lines on multi-line footers.
- Fixed a typo in the cookie banner.

2022-05-06:

- Added mentions of "Hallowe'en 2018, Rewritten".