@@ -1,0 +1,47 @@
+<!DOCTYPE html>
+
+<html lang="en">
+    <head>
+        <!-- Meta elements -->
+        <meta charset="utf-8">
+        <meta name="author" content="Murdo B. Maclachlan">
+        <meta
+          name="description"
+          content="The home page of Murdo Maclachlan."
+        >
+        <link rel="me" id="mastodon-identifier" href="https://mastodon.online/@murdomaclachlan">
+        <title>Murdo Maclachlan | Projects</title>
+
+        <!-- Styling -->
+        <link id="structure" rel="stylesheet" href="../static/css/universal.css">
+        <link id="theme" rel="stylesheet" href="../static/css/themes/theme_dark.css">
+        <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/linux-biolinum" type="text/css"/>
+        <link rel="stylesheet" href="../static/css/extensions/projects.css"/>
+        <link id="font" rel="stylesheet" href="../static/css/themes/font_serif.css">
+        <link id="favicon" rel="shortcut icon" type="image/webp" href="../static/img/favicons/default.webp">
+    </head>
+    <body>
+        <div id="header-container" class="outer-container">
+            <!-- Header will be inserted here -->
+        </div>
+        <div id="body-container" class="outer-container">
+            <main class="inner-container">
+                <div class="text-row">
+                    <div class="text-column">
+                        <button class="nav-button projects-button" type="button" onclick="window.location.href='projects/music.html'">MUSIC</button>
+                    </div>
+                    <div class="text-column">
+                        <button class="nav-button projects-button" type="button" onclick="window.location.href='projects/transcribing.html'">TRANSCRIBING</button>
+                    </div>
+                </div>
+            </main>
+        </div>
+        <div id="footer-container" class="outer-container">
+            <!-- Footer will be inserted here -->
+        </div>
+        <div id="scripts">
+            <!-- Scripts (secondary scripts inserted during constructor runtime) -->
+            <script id="constructor" src="../scripts/js/constructor.js"></script>
+        </div>
+    </body>
+</html>
