@@ -1,0 +1,59 @@
+<!DOCTYPE html>
+
+<html lang="en">
+    <head>
+        <!-- Meta elements -->
+        <meta charset="utf-8">
+        <meta name="author" content="Murdo B. Maclachlan">
+        <meta
+          name="description"
+          content="The home page of Murdo Maclachlan."
+        >
+        <meta id="prefix" content="../">
+        <link rel="me" id="mastodon-identifier" href="https://mastodon.online/@murdomaclachlan">
+        <title>Murdo Maclachlan | Music</title>
+
+        <!-- Styling -->
+        <link id="structure" rel="stylesheet" href="../../static/css/universal.css">
+        <link id="theme" rel="stylesheet" href="../../static/css/themes/theme_dark.css">
+        <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/linux-biolinum" type="text/css"/>
+        <link id="font" rel="stylesheet" href="../../static/css/themes/font_serif.css">
+        <link id="favicon" rel="shortcut icon" type="image/webp" href="../../static/img/favicons/default.webp">
+    </head>
+    <body>
+        <div id="header-container" class="outer-container">
+            <!-- Header will be inserted here -->
+        </div>
+        <div id="body-container" class="outer-container">
+            <main class="inner-container">
+                <div class="text-row">
+                    <div class="text-column">
+                        <h2><a id="#music" href="#music">Music</a></h2>
+                        <p><iframe
+                                width="40%"
+                                align="right"
+                                style="margin-left: 7px; height: 13em;"
+                                src="https://www.youtube.com/embed/N5QZRr5IFVg"
+                                title="YouTube video player"
+                                frameborder="0"
+                                allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen>
+                        </iframe>I've always loved music, and especially singing (I was in choir in secondary school) and during lockdown I decided it was time to become a lot more active with music. To that effect, I've been singing more, fiddling with MuseScore more, and so on. Not a great deal is public at the moment, but it has led to one thing I'm particularly proud of.
+
+                        The <a href="https://ggroupies.bandcamp.com/">GrafeasGroupies</a> are a group consisting of myself and several friends. Together we occasionally make albums consisting of memes and some serious tracks. To the right you'll find my cover of 'Mad World', which was included in our second album, <a href="https://ggroupies.bandcamp.com/album/mister-typealot-2">mister TypeALot</a>.
+
+                        I hope to create more proper music videos in the future. It can be difficult considering my lack of skill with instrumentals; I have to rely on YouTube to give good backing tracks, which it can't always be relied upon to do. Nonetheless, I sometimes find excellent ones, such as for 'Mad World', and in these cases I hope to create more recordings good enough to upload.
+                        </p>
+                    </div>
+                </div>
+            </main>
+        </div>
+        <div id="footer-container" class="outer-container">
+            <!-- Footer will be inserted here -->
+        </div>
+        <div id="scripts">
+            <!-- Scripts (secondary scripts inserted during constructor runtime) -->
+            <script id="constructor" src="../../scripts/js/constructor.js"></script>
+        </div>
+    </body>
+</html>
