@@ -7,18 +7,14 @@ h2:after {
     width: inherit;
 }
 footer { color: #333; }
-button { border-color: #000; }
-button:hover { border-color: #8d7f4b; }
+#settings-column button { border-color: #000; }
+#settings-column button:hover { border-color: #8d7f4b; }
 
 /* HEADER ELEMENTS */
 #logo {
     -webkit-filter: invert(100%);
     filter: invert(100%);
 }
-
-/* NAVIGATION */
-.selected { border-color: #7d6800; }
-.selected:hover { border-color: #7d6800; }
 
 /* MISCELLANEOUS */
 blockquote {
@@ -28,12 +24,17 @@ blockquote {
 }
 p a:hover, li a:hover, blockquote a:hover, .hlink:hover,
 .nav-button:hover, .nav-button-left:hover, .cookie-button:hover { color: #444; }
+.projects-button:hover {
+    color: #000;
+    background-color: #DDD;
+}
 .footer-links a:hover { color: #666; }
 .preview-image { border-color: #000; }
 .light-image {
     -webkit-filter: invert(100%);
     filter: invert(100%);
 }
+#account-button { border: 2px solid #000; }
 
 /* COOKIES */
 #cookie-popup {
